# prod-backend-template

./: Dockerfile  README.md  compose.yaml  pyproject.toml
migrations/versions/: 2024-03-28_init_217c359720d3.py
src/app/: app.py  crypt.py  dependencies.py  dtos.py  models.py  repositories.py  schemas.py  services.py  settings.py
src/app/controllers/: __init__.py  access.py  me.py  users.py
src/app/models/: base.py  group.py  post.py  user.py  user_to_group.py
